# finance-manager-app

./: README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 기능-추가-이슈-템플릿.md  버그-리포트-이슈-템플릿.md  자유-양식-템플릿.md
resources/nginx/: nginx.conf
scripts/: entrypoint.sh
src/accounts/: consts.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_initial.py
src/accounts/services/: account_number_generator.py  consts.py  logging_util.py
src/auth_token/: models.py
src/common/: authentications.py  consts.py  models.py
src/core/management/commands/: wait_for_db.py
src/djangoProject/: settings.py  urls.py
src/masterbank/: apps.py  models.py  tests.py
src/masterbank/migrations/: 0001_initial.py
src/transaction_history/: consts.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/transaction_history/migrations/: 0001_initial.py
src/users/: admin.py  backends.py  exceptions.py  managers.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py
src/utils/: common.py  email.py  models.py  validators.py
templates/: index.html
